--- a/src/main.properties
+++ b/src/main.properties
@@ -1,8 +1,8 @@
-key.openfile=\u6253\u5F00\u6587\u4EF6
+key.openfile=\u9009\u62E9\u6587\u4EF6\u5939
 key.file=\u6587\u4EF6\u5904\u7406
 key.result=\u7ED3\u679C\u5C55\u793A
 key.start=\u5F00\u59CB
-key.simple=\u91C7\u6837\u65B9\u6CD5
+key.simple=\u91C7\u6837+\u96C6\u6210\u5B66\u4E60\u65B9\u6CD5
 key.ensemble=\u96C6\u6210\u5B66\u4E60\u65B9\u6CD5
 key.base=\u57FA\u5206\u7C7B\u5668
 key.in=\u662F\u5426\u5185\u5D4C
