--- a/setting/baseClassification.properties
+++ b/setting/baseClassification.properties
@@ -1,2 +1,4 @@
 #=====clear====#Thu Mar 09 16:43:51 CST 2017
 IB1=weka.classifiers.lazy.IB1
+#Thu Mar 09 17:05:52 CST 2017
+Logistic=weka.classifiers.functions.Logistic
