--- a/src/main.properties
+++ b/src/main.properties
@@ -8,3 +8,5 @@ key.base=\u57FA\u5206\u7C7B\u5668
 key.in=\u662F\u5426\u5185\u5D4C
 key.add=\u6DFB\u52A0\u7B97\u6CD5
 key.clear=\u6E05\u7A7A
+key.outLog=\u5BFC\u51FA\u65E5\u5FD7
+key.outL=\u5BFC\u51FA\u65E5\u5FD7
