--- a/setting/baseClassification.properties
+++ b/setting/baseClassification.properties
@@ -6,3 +6,7 @@ CMAR_App=file\:C\:\\Users\\fan\\Desktop\\cmar.jar\:mine.CMAR_App
 IB1=weka.classifiers.lazy.IB1
 #Sat Mar 11 15:41:05 CST 2017
 NaiveBayes=weka.classifiers.bayes.NaiveBayes
+#Sun Mar 12 13:31:20 CST 2017
+ACWV=file\:C\:\\Users\\fan\\Desktop\\cmar.jar\:jzh.ACWV
+#Sun Mar 12 13:31:27 CST 2017
+MultiAcwv_App=file\:C\:\\Users\\fan\\Desktop\\cmar.jar\:multitree.MultiAcwv_App
