change method show ALL+""+All

--- a/setting/baseClassification.properties
+++ b/setting/baseClassification.properties
@@ -1,12 +1,6 @@
-#=====clear====#Sat Mar 11 15:00:26 CST 2017
-
-#Sat Mar 11 15:23:10 CST 2017
-CMAR_App=file\:C\:\\Users\\fan\\Desktop\\cmar.jar\:mine.CMAR_App
-#Sat Mar 11 15:39:23 CST 2017
+#=====clear====#Mon Mar 13 20:23:33 CST 2017
 IB1=weka.classifiers.lazy.IB1
-#Sat Mar 11 15:41:05 CST 2017
+#Mon Mar 13 20:24:04 CST 2017
 NaiveBayes=weka.classifiers.bayes.NaiveBayes
-#Sun Mar 12 13:31:20 CST 2017
-ACWV=file\:C\:\\Users\\fan\\Desktop\\cmar.jar\:jzh.ACWV
-#Sun Mar 12 13:31:27 CST 2017
-MultiAcwv_App=file\:C\:\\Users\\fan\\Desktop\\cmar.jar\:multitree.MultiAcwv_App
+#Tue Mar 14 10:20:33 CST 2017
+Logistic=weka.classifiers.functions.Logistic
