--- a/setting/method.properties
+++ b/setting/method.properties
@@ -1,16 +1,16 @@
 Bagging
-Boosting
-#Bagging_embedded_SMOTE
+#Boosting
+Bagging_embedded_SMOTE
 #Bagging_over_SMOTE
 #Boosting_embedded_SMOTE
 #Boosting_over_SMOTE
-#Bagging_embedded_OverSample
-#Bagging_over_OverSample
-Boosting_embedded_OverSample
-Boosting_over_OverSample
+Bagging_embedded_OverSample
+Bagging_over_OverSample
+#Boosting_embedded_OverSample
+#Boosting_over_OverSample
 Bagging_embedded_UnderSample
 Bagging_over_UnderSample
-Boosting_embedded_UnderSample
+#Boosting_embedded_UnderSample
 #Boosting_over_UnderSample
 #Simple
 #Over
